# FlowPilot

./: .env.example  .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  check_seed.py  pyproject.toml  seed_march_data.py
backend/app/: main.py  worker.py
backend/app/action/: Action.py  Register.py  action.py  actionRegistry.py  actionStepFactory.py  base.py  calendarAction.py  calendarListUpcomingAction.py  httpRequestAction.py  sendEmailAction.py  tasks.py
backend/app/api/: router.py
backend/app/connectors/: __init__.py  google_calendar.py  repo.py  router.py  tasks.py
backend/app/core/: auth.py  config.py  exceptions.py
backend/app/db/: connector.py  models.py  session.py
backend/app/execution/: __init__.py  context.py  contracts.py  engine.py  persistence.py  step_run_repo.py  step_runner.py  tasks.py  templating.py
backend/app/reporting/: ai_client.py  pipeline.py  repo.py  report.py  schedule.py  service.py  tasks.py
backend/app/suggestion/: __init__.py  analyzer.py  base.py  context.py  openai_client.py  rephraser.py  repo.py  selector.py  service.py
backend/app/trigger/: calendarEventTrigger.py  customTrigger.py  recurrence.py  register.py  service.py  tasks.py  timeTrigger.py  trigger.py  triggerConfig.py  triggerFactories.py  triggerRegistry.py  webhookTrigger.py  webhook_auth.py
backend/app/user/: EmailAddress.py  User.py  (+5 more)
backend/tests/: conftest.py  test_action.py  test_action_dispatch.py  test_action_timeout.py  test_api_auth_scoping.py  test_calendar_event_first_seen.py  test_calendar_list_upcoming.py  test_calendar_time_tokens.py  test_calendar_trigger.py  test_connectors_google.py  test_custom_trigger_dryrun.py  test_execution_engine.py  test_execution_states.py  test_execution_templating.py  test_health.py  test_reporting_ai_client.py  test_reporting_filters.py  test_reporting_pipeline.py  test_reporting_schedule.py  test_reporting_schema.py  test_reporting_service.py  test_reports_api.py  test_suggestion_analyzer.py  test_suggestion_api.py  test_suggestion_selector.py  test_suggestion_service.py  test_suggestion_strategies.py  test_trigger.py  test_trigger_context_visibility.py  test_trigger_service.py  test_trigger_tasks.py  test_user_auth.py  test_webhook_auth.py  test_webhook_ingest.py  test_webhook_text_parser.py  test_workflow_api.py  test_workflow_builder.py  test_workflow_service.py
(+108 files in other folders)
